--- a/css/style.css
+++ b/css/style.css
@@ -112,10 +112,6 @@ div .hero-div h1 {
   text-decoration: underline;
 }
 
-a.nav-list {
-  color: #2e2f42;
-  text-decoration: none;
-}
 a.nav-list:hover {
   color: #404bbf;
 }
@@ -126,6 +122,33 @@ a.address-link {
 }
 a.address-link:hover {
   color: #404bbf;
+}
+
+a.nav-list {
+  color: #2e2f42;
+  text-decoration: none;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+a.nav-list:hover,
+a.nav-list:focus {
+  color: #404bbf;
+}
+
+.nav-list.current {
+  color: #404bbf;
+}
+
+a.nav-list:active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 ul {
@@ -149,6 +172,13 @@ button:hover {
 
 .hero-div {
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.8),
+      rgba(46, 47, 66, 0.8)
+    ),
+    url("../images/people-office 1.jpg");
+  background-repeat: no-repeat;
 }
 
 .section-one .section-list {
@@ -206,7 +236,7 @@ button:hover {
 
 .social-links a:hover,
 .social-links a:focus {
-  background-color: #404bbf;
+  background-color: #31d0aa;
 }
 
 .social-icon-card {
@@ -232,7 +262,7 @@ button:hover {
 }
 
 .footer-social-links a:hover {
-  background-color: #404bbf;
+  background-color: #31d0aa;
 }
 
 .section h2 {
@@ -253,6 +283,66 @@ button:hover {
 
 .section-tree > h2 {
   text-align: center;
+}
+
+.portfolio-list,
+.portfolio-row ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin-bottom: 48px;
+}
+
+.portfolio-list li,
+.portfolio-row li {
+  background-color: #ffffff;
+  border: 1px solid #e7e9fc;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: hidden;
+  flex-basis: calc((100% - 48px) / 3);
+}
+
+.portfolio-list li:hover,
+.portfolio-row li:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-image-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay-text {
+  color: #f4f4fd;
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: left;
+}
+
+.portfolio-list li:hover .overlay,
+.portfolio-row li:hover .overlay {
+  opacity: 1;
+}
+
+.card {
+  padding: 32px 16px;
+  border-top: none;
 }
 
 span {
