--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@ span {
 
 footer {
   background-color: #2e2f42;
-  padding: 100px 0;
+  padding: 100px 180px;
 }
 .footer-text {
   color: #f4f4fd;
